<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.github.thmarx.cms</groupId>
	<artifactId>cms-parent</artifactId>
	<version>5.1.0</version>
	<packaging>pom</packaging>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>21</maven.compiler.source>
		<maven.compiler.target>21</maven.compiler.target>
		<exec.mainClass>com.github.thmarx.cms.Startup</exec.mainClass>
		<maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>
		<jetty.version>12.0.10</jetty.version>
	</properties>
	<modules>
		<module>cms-api</module>
		<module>cms-server</module>
		<module>modules-framework</module>
		<module>modules</module>
		<module>cms-filesystem</module>
		<module>cms-media</module>
		<module>cms-git</module>
		<module>cms-sandbox</module>
		<module>cms-template</module>
		<module>cms-content</module>
		<module>cms-extensions</module>
		<module>cms-auth</module>
		<module>integration-tests</module>
	</modules>
	<inceptionYear>2023</inceptionYear>
	<organization>
		<name>Marx-Software</name>
	</organization>
	<licenses>
		<license>
			<name>GPL v3</name>
			<url>https://www.gnu.org/licenses/gpl-3.0.html</url>
		</license>
	</licenses>
	
	<dependencyManagement>
		<dependencies>
			
			<dependency>
				<groupId>com.github.thmarx.cms</groupId>
				<artifactId>cms-api</artifactId>
				<version>${project.version}</version>            
			</dependency>
			<dependency>
				<groupId>com.github.thmarx.cms</groupId>
				<artifactId>cms-auth</artifactId>
				<version>${project.version}</version>            
			</dependency>
			<dependency>
				<groupId>com.github.thmarx.cms</groupId>
				<artifactId>cms-filesystem</artifactId>
				<version>${project.version}</version>            
			</dependency>
			<dependency>
				<groupId>com.github.thmarx.cms</groupId>
				<artifactId>cms-template</artifactId>
				<version>${project.version}</version>            
			</dependency>
			<dependency>
				<groupId>com.github.thmarx.cms</groupId>
				<artifactId>cms-content</artifactId>
				<version>${project.version}</version>            
			</dependency>
			<dependency>
				<groupId>com.github.thmarx.cms</groupId>
				<artifactId>cms-extensions</artifactId>
				<version>${project.version}</version>            
			</dependency>
			<dependency>
				<groupId>com.github.thmarx.cms</groupId>
				<artifactId>cms-media</artifactId>
				<version>${project.version}</version>            
			</dependency>
			<dependency>
				<groupId>com.github.thmarx.cms</groupId>
				<artifactId>cms-git</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.github.thmarx.cms.module.framework</groupId>
				<artifactId>modules-manager</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.github.thmarx.cms.module.framework</groupId>
				<artifactId>modules-api</artifactId>
				<version>${project.version}</version>
			</dependency>
			
			<dependency>
				<groupId>com.github.usefulness</groupId>
				<artifactId>webp-imageio</artifactId>
				<version>0.8.0</version>
			</dependency>
			<dependency>
				<groupId>org.yaml</groupId>
				<artifactId>snakeyaml</artifactId>
				<version>2.2</version>            
			</dependency>
			<dependency>
				<groupId>org.eclipse.jetty</groupId>
				<artifactId>jetty-server</artifactId>
				<version>${jetty.version}</version>
			</dependency>
			<dependency>
				<groupId>org.projectlombok</groupId>
				<artifactId>lombok</artifactId>
				<version>1.18.32</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>com.github.ben-manes.caffeine</groupId>
				<artifactId>caffeine</artifactId>
				<version>3.1.8</version>
			</dependency>
			<dependency>
				<groupId>com.google.guava</groupId>
				<artifactId>guava</artifactId>
				<version>33.2.0-jre</version>
			</dependency>
			<dependency>
				<groupId>com.google.inject</groupId>
				<artifactId>guice</artifactId>
				<version>7.0.0</version>
			</dependency>

			<dependency>
				<groupId>org.apache.lucene</groupId>
				<artifactId>lucene-core</artifactId>
				<version>9.11.1</version>
			</dependency>
			<dependency>
				<groupId>org.apache.lucene</groupId>
				<artifactId>lucene-analysis-common</artifactId>
				<version>9.11.1</version>
			</dependency>
			<dependency>
				<groupId>com.h2database</groupId>
				<artifactId>h2-mvstore</artifactId>
				<version>2.2.224</version>
			</dependency>

			<dependency>
				<groupId>org.graalvm.polyglot</groupId>
				<artifactId>polyglot</artifactId>
				<version>24.0.1</version>
			</dependency>
			<dependency>
				<groupId>org.graalvm.js</groupId>
				<artifactId>js-language</artifactId>
				<version>24.0.1</version>
			</dependency>
			<dependency>
				<groupId>org.apache.logging.log4j</groupId>
				<artifactId>log4j-api</artifactId>
				<version>2.23.1</version>
			</dependency>
			<dependency>
				<groupId>org.apache.logging.log4j</groupId>
				<artifactId>log4j-core</artifactId>
				<version>2.23.1</version>
			</dependency>
			<dependency>
				<groupId>org.apache.logging.log4j</groupId>
				<artifactId>log4j-slf4j2-impl</artifactId>
				<version>2.23.1</version>
			</dependency>
			<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>2.0.13</version>
			</dependency>
			<!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
			<dependency>
				<groupId>org.jsoup</groupId>
				<artifactId>jsoup</artifactId>
				<version>1.17.2</version>
			</dependency>
			
			<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-text -->
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-text</artifactId>
				<version>1.12.0</version>
			</dependency>


			<!-- https://mvnrepository.com/artifact/org.assertj/assertj-core -->
			<dependency>
				<groupId>org.assertj</groupId>
				<artifactId>assertj-core</artifactId>
				<version>3.25.3</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.mockito</groupId>
				<artifactId>mockito-core</artifactId>
				<version>5.11.0</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.mockito</groupId>
				<artifactId>mockito-junit-jupiter</artifactId>
				<version>5.11.0</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.junit</groupId>
				<artifactId>junit-bom</artifactId>
				<version>5.10.2</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>org.awaitility</groupId>
				<artifactId>awaitility</artifactId>
				<version>4.2.1</version>
			</dependency>
		</dependencies>
	</dependencyManagement>
	
	<dependencies>
		<dependency>
			<groupId>org.assertj</groupId>
			<artifactId>assertj-core</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-junit-jupiter</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.awaitility</groupId>
			<artifactId>awaitility</artifactId>
			<scope>test</scope>
		</dependency>

	</dependencies>
	
	<build>
		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>license-maven-plugin</artifactId>
				<version>2.4.0</version>
				<configuration>
					<verbose>false</verbose>
					<licenseName>gpl_v3</licenseName>
				</configuration>
				<executions>
					<execution>
						<id>first</id>
						<goals>
							<goal>update-file-header</goal>
						</goals>
						<phase>process-sources</phase>
						<configuration>
							<licenseName>gpl_v3</licenseName>
							<roots>
								<root>src/main/java</root>
								<root>src/resources</root>
								<root>src/test</root>
							</roots>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.12</version>
				<executions>
					<execution>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>report</id>
						<phase>prepare-package</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>3.2.5</version>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
	
	<profiles>
		<profile>
			<id>dist</id>
		</profile>
		<profile>
			<id>deploy</id>
			<distributionManagement>
				<repository>
					<snapshots>
						<enabled>true</enabled>
					</snapshots>
					<id>marx-software-ftp</id>
					<url>ftps://maven.marx-software.de</url>
				</repository>
			</distributionManagement>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-deploy-plugin</artifactId>
						<version>3.1.1</version>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>
